# dbt_snoflake_udemy

./: .gitignore  pyproject.toml
dbtlearn/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql
dbtlearn/models/fct/: fct_reviews.sql
dbtlearn/models/src/: src_hosts.sql  src_reviews.sql
